# thlib

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Config.cmake.in  LICENSE  README.md  dat-formats.md
include/: thlib.h
src/: bitstream.c  bitstream.h  dat.c  dat.h  lzss.c  lzss.h  pbg3.c  pbg3.h  pbg4.c  pbg4.h
